<resources>
    <string name="app_name">StatCounter</string>
    <string name="playerChoiceOne">One player</string>
    <string name="playerChoiceTwo">Two players</string>
    <string name="pickGameMode">Game mode</string>
    <string-array name="gameModes">
        <item>Constructed</item>
        <item>Commander</item>
        <item>Two Headed Giant</item>
    </string-array>
    <string name="pickName">Name</string>
    <string name="color">Color</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="def_p1Name">Default Player 1 Name</string>
    <string name="def_p1Color">Default Player 1 Color</string>
    <string name="def_p2Name">Default Player 2 Name</string>
    <string name="def_p2Color">Default Player 2 Color</string>
    <string name="def_mode">Default Game mode</string>
    <string name="game_new">New Game</string>
    <string name="game2PlayerQuick">Quick 2 Player Game</string>
    <string name="game1PlayerQuick">Quick Game</string>
    <string name="title">StatCounter</string>
    <string name="settings">Settings</string>
    <string name="prefKey">taffer.statcounter.prefKey</string>
    <string-array name="toolTips">
        <item name="tip1"> Shake your phone to throw a D20!</item>
        <item name="tip2"> Turn your phone upside down to flip a coin!</item>
    </string-array>
</resources>