<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabNext"
        android:layout_width="84dp"
        android:layout_height="76dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="38dp"
        android:background="@color/colorAccent"
        android:clickable="true"
        android:onClick="nextStage"
        app:srcCompat="@drawable/ic_next" />

    <ImageView
        android:layout_centerHorizontal="true"
        android:id="@+id/ivDice"
        android:layout_width="133dp"
        android:layout_height="151dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="402dp"
        app:srcCompat="@drawable/ic_brush" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="361dp"
        android:text="@string/pickName"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etName"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="305dp"
        android:ems="10"
        android:hint="@string/player2"
        android:inputType="textPersonName" />

    <ImageView
        android:id="@+id/iv1"
        android:layout_width="44dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="118dp"
        android:onClick="onColorClick"
        android:layout_marginBottom="206dp"
        android:tint="@color/pastelDarkBlue"
        app:srcCompat="@drawable/ic_circle" />

    <ImageView
        android:id="@+id/iv4"
        android:layout_width="44dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="188dp"
        android:layout_marginBottom="206dp"
        android:onClick="onColorClick"
        android:tint="@color/pastelGreen"
        app:srcCompat="@drawable/ic_circle" />

    <ImageView
        android:id="@+id/iv2"
        android:layout_width="44dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="259dp"
        android:layout_marginBottom="206dp"
        android:tint="@color/pastelPink"
        android:onClick="onColorClick"
        app:srcCompat="@drawable/ic_circle" />

    <ImageView
        android:id="@+id/iv3"
        android:layout_width="44dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="207dp"
        android:onClick="onColorClick"
        android:tint="@color/pastelYellow"
        android:padding="1dp"
        app:srcCompat="@drawable/ic_circle" />

    <TextView
        android:id="@+id/tvColor"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="268dp"
        android:text="@string/color"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivSelected"
        android:layout_width="53dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="149dp"
        android:layout_marginBottom="118dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/ic_circle" />

</RelativeLayout>