<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".SettingsActivity">

        <EditText
            android:id="@+id/edDefaultP2Name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="76dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/def_p1Name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="95dp"
            android:layout_marginEnd="18dp"
            android:tint="@color/colorGamemode"
            app:layout_constraintBottom_toBottomOf="@+id/iv8"
            app:layout_constraintEnd_toStartOf="@+id/iv8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv8"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_circle" />

        <ImageView
            android:id="@+id/iv4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="94dp"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/iv2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv2"
            app:layout_constraintTop_toTopOf="@+id/iv2"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_circle" />

        <ImageView
            android:id="@+id/iv2"
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="18dp"
            android:tint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="@+id/iv8"
            app:layout_constraintEnd_toStartOf="@+id/iv4"
            app:layout_constraintStart_toEndOf="@+id/iv8"
            app:layout_constraintTop_toTopOf="@+id/iv8"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_circle" />

        <ImageView
            android:id="@+id/iv8"
            android:layout_width="0dp"
            android:layout_height="39dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="18dp"
            android:padding="1dp"
            android:tint="@color/colorAccent"
            app:layout_constraintEnd_toStartOf="@+id/iv2"
            app:layout_constraintStart_toEndOf="@+id/iv5"
            app:layout_constraintTop_toBottomOf="@+id/edDefaultP2Name"
            app:srcCompat="@drawable/ic_circle" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="31dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_tick" />

        <Spinner
            android:id="@+id/spinerMode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="203dp"
            android:entries="@array/gameModes"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvDefaultGamemode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="18dp"
            android:text="@string/def_mode"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/spinerMode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.953" />

    </android.support.constraint.ConstraintLayout>

    <EditText
        android:id="@+id/edDefaultP2Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="76dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/def_p2Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="95dp"
        android:layout_marginEnd="18dp"
        android:tint="@color/colorGamemode"
        app:layout_constraintBottom_toBottomOf="@+id/iv8"
        app:layout_constraintEnd_toStartOf="@+id/iv8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv8"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_circle" />

    <ImageView
        android:id="@+id/iv4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="94dp"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/iv2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv2"
        app:layout_constraintTop_toTopOf="@+id/iv2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_circle" />

    <ImageView
        android:id="@+id/iv2"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="18dp"
        android:tint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/iv8"
        app:layout_constraintEnd_toStartOf="@+id/iv4"
        app:layout_constraintStart_toEndOf="@+id/iv8"
        app:layout_constraintTop_toTopOf="@+id/iv8"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_circle" />

    <ImageView
        android:id="@+id/iv8"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="18dp"
        android:padding="1dp"
        android:tint="@color/colorAccent"
        app:layout_constraintEnd_toStartOf="@+id/iv2"
        app:layout_constraintStart_toEndOf="@+id/iv5"
        app:layout_constraintTop_toBottomOf="@+id/edDefaultP2Name"
        app:srcCompat="@drawable/ic_circle" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="31dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_tick" />

</android.support.constraint.ConstraintLayout>